--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,76 @@ body{
     padding-bottom:3px;
   }
 
+/* SHOWCASE */
+#showcase{
+    background:url('../images/showcase.jpg') no-repeat center center;
+    border-bottom:1px solid #56a79a;
+    margin-bottom:30px;
+  }
+  
+  #showcase .row{
+    height:600px;
+  }
+  
+  #showcase h1{
+    font-size:50px;
+    margin:0;
+    padding-bottom:20px;
+  }
+  
+  #showcase p{
+    color:#ccc;
+    margin:0;
+  }
+  
+  #showcase .showcase-content{
+    background:#333;
+    color:#fff;
+    border-radius:90px;
+    padding:40px;
+    opacity:0.9;
+  }
+  
+  /* FEATURES */
+  #features h2{
+    font-size:35px;
+    margin:0;
+    padding-bottom:10px;
+  }
+  
+  #features p{
+    color:#888;
+    margin:0;
+    margin-bottom:40px;
+  }
+  
+  #features .fa{
+    font-size:60px;
+    color:#56a79a;
+  }
+  
+  /* INFO */
+  #info{
+    background:#333 url('../images/info-bg.jpg') no-repeat;
+    color:#fff;
+  }
+  
+  #info h2{
+    font-size:35px;
+    margin:0;
+    padding-bottom:10px;
+  }
+  
+  #info ul{
+    list-style:none;
+    padding:0;
+  }
+  
+  #info li{
+    line-height:2em;
+    font-size:20px;
+  }
+
 /* FOOTER */
 #main-footer{
     background:#56a79a;
