--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,35 @@ body{
     font-size:20px;
   }
 
+/* COMPANY */
+#company{
+    background:#333;
+    color:#fff;
+    padding:10px 0;
+  }
+  
+  #company h4{
+    text-transform:uppercase;
+    margin-bottom:0;
+  }
+  
+  #company ul{
+    padding:0;
+    list-style:none;
+    line-height:2em;
+  }
+  
+  #company input[type="text"]{
+    padding:7px;
+  }
+  
+  #company button{
+    background:#222;
+    color:#fff;
+    padding:10px;
+    border:0;
+  }
+
 /* FOOTER */
 #main-footer{
     background:#56a79a;
