--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body{
 
 /* SHOWCASE */
 #showcase{
-    background:url('../images/showcase.jpg') no-repeat center center;
+    background:url('../assets/showcase.jpg') no-repeat center center;
     border-bottom:1px solid #56a79a;
     margin-bottom:30px;
   }
@@ -100,7 +100,7 @@ body{
   
   /* INFO */
   #info{
-    background:#333 url('../images/info-bg.jpg') no-repeat;
+    background:#333 url('../assets/info-bg.jpg') no-repeat;
     color:#fff;
   }
   
